subprojects/swen430/src/test/resources/tests/valid/IfElse_Valid_6.while
void main() {
    if (5.0 > 10.5) {
        print "hi";
    } else {
        print "bye";
    }
}
