subprojects/swen430/src/test/resources/tests/invalid/Break_Invalid_6.while
string foo(int x) {
    for (int i = 0; i < 5; i = i + 1) {
        if (true) {
            break;
        } else {
            break;
        }

        return "deadcode";
    }

    return "bar";
}

void main() {
    print foo(1);
}

